# TopNet

./: .gitignore  AWS_PRICING_INTEGRATION.md  COST_BREAKDOWN.md  DEMO_5MIN.md  DEMO_CHECKLIST.md  DEMO_GUIDE.md  DEMO_PROMPTS.md  DEMO_SCRIPT.md  README.md  TECHNICAL_CHALLENGES.md  check_iam_users.py  project.md  screenshot.js  start.sh
backend/: .env.example  .gitignore  cleanup_aws.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  aws_info.py  chat.py  deploy.py  topologies.py
backend/app/builder/: __init__.py
backend/app/core/: __init__.py  builder.py  chat.py  nlp.py  pricing.py  spec.py  types.py  user_data_generator.py
backend/app/terraform/: __init__.py
backend/app/terraform/aws/: __init__.py  generator.py
backend/app/validation/: __init__.py  cidr_overlap.py  ha_spof.py  orphaned_nodes.py  reachability.py
backend/scripts/: calculate_template_costs.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: deployApi.ts  topologyApi.ts
frontend/src/components/: AwsAccountStatus.tsx  AwsDashboard.tsx  ChatPanel.tsx  CostPanel.tsx  CustomNode.tsx  DeployPanel.tsx  DeploymentConsole.tsx  DeploymentControl.tsx  GettingStartedGuide.tsx  LogPanel.tsx  NodeInspector.tsx  TopologyCanvas.tsx  ValidationPanel.tsx
frontend/src/config/: api.ts
frontend/src/pages/: EditorPage.tsx  LandingPage.tsx
frontend/src/types/: deployment.ts  topology.ts
frontend/src/utils/: graphConverter.ts  userDataGenerator.ts
